# MotorControl

./: CMakeLists.txt  Control.cpp  Control.h  Install.sh  UnInstall.sh  main.cpp  send_test.py
Configs/: Configs.cpp  Configs.h
Log/: LOG.h
PT/: PT.cpp  PT.h
SPI/: SPI.cpp  SPI.h
info/dts/: tegra210-p3448-0000-p3449-0000-b00 (копия).dts  tegra210-p3448-0000-p3449-0000-b00-user-custom.dtb  tegra210-p3448-0000-p3449-0000-b00-user-custom.dts  tegra210-p3448-0000-p3449-0000-b00.dtb  tegra210-p3448-0000-p3449-0000-b00_imx477_pinmux.dtb  tegra210-p3448-0000-p3449-0000-b00_imx477_pinmux.dts
